完善locale工具库

--- a/Business/DemoBusiness/src/main/res/values/strings.xml
+++ b/Business/DemoBusiness/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="lf_other_name">小杨测试</string>
-
+    <string name="lf_other_name" translatable="false">小杨测试</string>
 </resources>
