--- a/Read/ReadJavaWiki/01.面向对象/01.面向对象设计思想.md
+++ b/Read/ReadJavaWiki/01.面向对象/01.面向对象设计思想.md
@@ -1,18 +1,35 @@
 #### 目录介绍
-- 01.前沿介绍
-- 02.面向对象编程
-- 03.编程语言划分
-- 04.面向对象分析和设计
-- 05.UML介绍说明
-- 06.面向对象思想
-- 07.类与对象及其应用
-- 08.回顾知识点
+- 01.面向对象概述
+    - 1.1 它的背景
+    - 1.2 遇到问题
+    - 1.3 四大特性
+    - 1.4 
+- 02.方案设计
+    - 2.1 以前架构
+    - 2.2 改版架构
+        - 2.2.1 架构设计图
+        - 2.2.2 UML设计图
+    - 2.3 功能设计
+        - 2.3.1 关键流程图
+        - 2.3.2 接口设计图
+        - 2.3.3 模块间依赖关系
+- 03.其他设计
+    - 3.1 性能设计
+    - 3.2 稳定性设计
+    - 3.3 灰度设计
+    - 3.4 降级设计
+    - 3.5 异常设计
 
 
 
-### 01.前沿介绍
-- 提到面向对象，我相信很多人都不陌生，随口都可以说出面向对象的四大特性：封装、抽象、继承、多态。实际上，面向对象这个概念包含的内容还不止这些。当谈论面向对象的时候，经常会谈到的一些概念和知识点，为学习后面的几节更加细化的内容做一个铺垫。
-- 特别说明一下，对于今天讲到的概念和知识点，大部分都是点到为止，并没有展开详细讲解。如果你看了之后，对某个概念和知识点还不是很清楚，那也没有关系。在后面的几节课中，会花更多的篇幅，对今天讲到的每个概念和知识点，结合具体的例子，一一做详细的讲解。
+### 01.面向对象概述
+#### 1.1 它的背景
+
+
+#### 1.3 四大特性
+- 面向对象的四大特性：封装、抽象、继承、多态。
+
+
 
 
 
@@ -97,7 +114,7 @@
 #### 7.3 用引用操作对象
 - 拥有一个引用的同时，并不一定需要有一个对象与它关联。
     - 如何理解上面这句话，因此，如果想操作一个词或句子，则可以创建一个String引用。可以发现s不是一个对象，而仅仅是创建了一个引用。
-    ```java
+    ``` java
     String s；//这里创建的只是引用，并不是对象。如果此时给S发送消息，就会返回一个运行时的错误。因为此时s并没有与任何事物相关联。
     String s=“adad”;//这是一种安全的写法。不过大部分的时候问题不大，如果你只是创建了一个引用，然后在后面的语句中使用到了String。编译器会提示你这个错误（not have been initialized）；
     ```
