--- a/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
+++ b/Read/ReadMeWiki/00.方案实践/07.App磁盘沙盒工具实践.md
@@ -17,12 +17,12 @@
     - 3.5 模块间依赖关系
 - 04.一些技术要点说明
     - 4.1 使用队列管理Fragment栈
-    - 4.2 存储的基础概念
-    - 4.3 File文件列表
-    - 4.4 不同版本访问权限
-    - 4.5 访问文件操作
-    - 4.6 10和11权限说明
-    - 4.7 分享文件给第三方
+    - 4.2 File文件列表
+    - 4.3 不同版本访问权限
+    - 4.4 访问文件操作
+    - 4.5 10和11权限说明
+    - 4.6 分享文件给第三方
+    - 4.7 打开图片资源
 - 05.其他设计实践说明
     - 5.1 性能设计
     - 5.2 稳定性设计
@@ -54,7 +54,7 @@
     - 针对file文件夹，或者file文件，长按可以出现弹窗，让测试选择是否删除文件。
     - 点击file文件夹，则拿到对应的文件列表，然后展示。点击file直到是具体文件(文本，图片，db，json等非file文件夹)跳转详情。
 - 一键接入该工具
-    - 
+    - FileExplorerActivity.startActivity(MainActivity.this);
 
 
 ### 02.Android存储基本概念
@@ -83,7 +83,7 @@
     - databases-->存放数据库文件
     - files-->存放一般文件
     - lib-->存放App依赖的so库 是软链接，指向/data/app/ 某个子目录下
-    - shared_prefs-->存放SharedPreferences 文件
+    - shared_prefs-->存放 SharedPreferences 文件
 - 那么怎么通过代码访问到这些路径的文件呢？代码如下所示
     ``` java
     context.getCacheDir().getAbsolutePath()
@@ -246,6 +246,12 @@
         }
         ```
 
+
+### 4.3 File文件列表
+
+
+
+
 #### 4.4 不同版本访问权限
 - Android 6.0 之前访问方式
     - Android 6.0 之前是无需申请动态权限的，在AndroidManifest.xml 里声明存储权限。就可以访问共享存储空间、其它目录下的文件。
@@ -264,6 +270,8 @@
                 new String[]{Manifest.permission.WRITE_EXTERNAL_STORAGE}, CODE);
     } 
     ```
+
+
 
 
 #### 4.5 访问文件操作
@@ -292,71 +300,47 @@
     - 直接构造路径。与媒体文件一样，可以直接构造路径访问。
 - 总结一下共同点
     - 访问目录/文件可通过如下两个方法：1、通过路径访问。路径可以直接构造也可以通过MediaStore获取。 2、通过Uri访问。Uri可以通过MediaStore或者SAF(存储访问框架，通过intent调用startActivity访问)获取。
-      
+
+
 
 #### 4.6 10和11权限说明
 - Android10权限改变
     - 比如能够直接在/sdcard/目录下创建目录/文件。可以看出/sdcard/目录下，如淘宝、qq、qq浏览器、微博、支付宝等都自己建了目录。
     - 这么看来，导致目录结构很乱，而且App卸载后，对应的目录并没有删除，于是就是遗留了很多"垃圾"文件，久而久之不处理，用户的存储空间越来越小。
+- 之前文件创建弊端如下
+    - 卸载App也不能删除该目录下的文件
+    - 在设置里"清除数据"或者"清除缓存"并不能删除该目录下的文件
+    - App可以随意修改其它目录下的文件，如修改别的App创建的文件等，不安全
+- 为什么要在/sdcard/目录下新建app存储的目录
+    - 此处新建的目录不会被设置里的App存储用量统计，让用户"看起来"自己的App占用的存储空间很小。还有就是方便操作文件
+
 
 
 #### 4.5 分享文件给第三方
 - https://www.jianshu.com/p/d71afdf9c90a
+
+
+
+#### 4.7 打开图片资源
+- 首先判断文件，是否是图片资源，如果是图片资源，则跳转到打开图片详情。目前只是根据文件的后缀名来判断(对文件名称以.进行裁剪获取后缀名)是否是图片。
+    ``` java
+    if (FileExplorerUtils.isImage(fileInfo)) {
+        Bundle bundle = new Bundle();
+        bundle.putSerializable("file_key", fileInfo);
+        showContent(ImageDetailFragment.class, bundle);
+    } 
+    ```
+- 打开图片跳转详情，这里面为了避免打开大图OOM，因此需要对图片进行压缩，目前该工具主要是内存压缩和尺寸缩放方式。大概的原理如下
+    - 例如，我们的原图是一张 2700 * 1900 像素的照片，加载到内存就需要 19.6M 内存空间，但是，我们需要把它展示在一个列表页中，组件可展示尺寸为 270 * 190，这时，我们实际上只需要一张原图的低分辨率的缩略图即可（与图片显示所对应的 UI 控件匹配），那么实际上 270 * 190 像素的图片，只需要 0.2M 的内存即可。这个采用缩放比压缩。
+    - 加载图片，先加载到内存，再进行操作吗，可以如果先加载到内存，好像也不太对，这样只接占用了 19.6M + 0.2M 2份内存了，而我们想要的是，在原图不加载到内存中，只接将缩放后的图片加载到内存中，可以实现吗？
+    - 进行内存压缩，要将BitmapFactory.Options的inJustDecodeBounds属性设置为true，解析一次图片。注意这个地方是核心，这个解析图片并没有生成bitmap对象(也就是说没有为它分配内存控件)，而仅仅是拿到它的宽高等属性。
+    - 然后将BitmapFactory.Options连同期望的宽度和高度一起传递到到calculateInSampleSize方法中，就可以得到合适的inSampleSize值了。这一步会压缩图片。之后再解析一次图片，使用新获取到的inSampleSize值，并把inJustDecodeBounds设置为false，就可以得到压缩后的图片了。
+
+
+
 
 - Android-10、11-存储完全适配(上)
 - https://www.jianshu.com/p/3cbb7febbfa3
 - http://wiki.intra.xiaojukeji.com/pages/viewpage.action?pageId=797158127
 - https://www.jianshu.com/p/d71afdf9c90a
 
-
-1.解决dokit升级后，一些工具不能使用bug，以及部分资源找不到问题
-2.代码覆盖度在debug下依赖，正式包下不依赖，优化配置
-3.修改dokit升级后，排查mock定位失效问题，fix 定位mock数据bug
-4.梳理权限合规需求，开发合规需求
-
-
-
-问题：
-
-1.前期写demo阶段：
-前期写demo，针对技术文档上技术点，快速开发，共排期9天。前期针对地图通信接口的梳理不充足，后期反复修改变动较大。
-
-2.中期开发需求阶段
-
-3.两端一起联调阶段
-联调这块，主要是涉及poi地图请求，以及地图拖动请求，归位高亮等逻辑，双方
-4.最后修改bug阶段
-提测自测不严谨
-
-
-
-
-1.自定义枚举，getInitParam方法不是public，报红提示
-2.除了设置弹窗正文，暴露设置标题，确定按钮和取消按钮设置文案的方法
-
-读写权限，全局搜索：
-这个是读取相册
-MediaStore.Images.Media
-MediaStore.Files
-MediaStore.Files
-
-查看FileUtils使用的地方文件操作
-
-
-    /**
-     * 跳转到首页
-     */
-    @JsInterface("popToRoot")
-    public void popToRoot(CallbackFunction function) {
-        Activity topActivity = ActivityManager.getInstance().peek();
-        if (topActivity==null || topActivity.isFinishing() || topActivity.isDestroyed()) {
-            mLogger.error("popToRoot error: Activity state error");
-            RiderJsBridgeHelper.Companion.callbackFail(function, RiderJsBridgeHelper.ERROR_MESSAGE_INVALID_STATE);
-            return;
-        }
-        //跳转到首页
-        Intent intent = new Intent(topActivity, RiderMainActivity.class);
-        intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
-        topActivity.startActivity(intent);
-        RiderJsBridgeHelper.Companion.callbackSuccess(function);
-    }
