--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -9,22 +9,19 @@
 
 
 ### 1.个人简介
-- 姓名：杨充【27岁】
+- 姓名：杨充【28岁】
 - 电话：13667225184
 - 邮箱：yangchong211@163.com
 - GitHub：https://github.com/yangchong211
-- 博客汇总：https://github.com/yangchong211/YCBlogs
-- 目前工作情况：在职状态
-- 技术项目和博客：GitHub项目16k以上star，follower1.8k以上，发表博客100多篇。
-- 热爱技术：开源项目和博客多次被鸿洋，郭霖，Android技术周刊，干活集中营等等推荐。
-- 学校：武汉软件工程职业学院
+- 目前工作情况：在职状态(滴滴RLab事业部)
+- 技术项目和博客：GitHub项目18k以上star，follower2k以上，发表博客100多篇。
 
 
 
 
 ### 2.专业技能
 #### 2.1 基础技能
-- 5年的Android开发经验，能独立地完成开发的工作。有github封装库长期维护的库！有组件化项目经验！
+- 6年的Android开发经验，能独立地完成开发的工作。有github封装库长期维护的库！有组件化项目经验！
 - 理解基本数据类型和包装类原理，深入理解String的创建机制，具有扎实的Java语言基础。
 - 对面向对象，数据结构比如常见List，Map等，泛型设计，线程，反射，异常等有较深理解。
 - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点。
