完善磁盘工具

--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -1,8 +1,8 @@
 ### 目录介绍
 - 1.个人简介
 - 2.专业技能
-- 3.工作经历
-- 4.技术产出
+- 3.技术产出
+- 4.工作经历
 - 5.个人评价
 - 6.开源项目
 
@@ -34,36 +34,46 @@
 - 熟悉glide加载图片压缩，三级缓存，同异步加载，对象池优化，低内存条件优化，优化加载list条目图片等等。
 
 
+### 3.一些技术产出
+- **通用视频播放器**【用于6条业务线，star是1.6k】
+    - 解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
+- 网络拦截小助手【用于4条业务线】
+    - 网络流程分析，记录每个网络请求->响应数据，方便查看很全面的请求头信息，响应头信息，以及body实体，以及网络连接，dns解析，TLS连接，请求响应等时间差……
+- WebView封装库【上搜车内部开源推荐库】
+    - 基于腾讯x5开源库，提高webView开发效率，大概要节约你百分之六十的时间成本。
+- 组件化项目
+    - 项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码案例。辅助快速熟悉组件化项目
 
-### 3.工作经历
-#### 3.0 2021年3月份到现在
+
+### 4.工作经历
+#### 4.1 2021年3月份到现在
 - 负责滴滴RLab外卖骑手端App开发
-- 滴滴Android开发经历
     - 1.重构项目，主导进行MVP架构的更改，以及技术选型方案的商讨和制定。
     - 2.封装公共组件和基础base类，统一项目中弹窗，页面状态管理切换，网络请求等。
     - 3.对于模仿易车，懂车帝，汽车之家等app，确定技术方案，以及和服务端确定实践方案。
     - 4.使用liveData替代之前EventBus事件总线，解决了避免页面不可见刷新接口。
     - 5.项目中，封装了adapter分组库，富文本库，弹窗库，事件总线库，以及webView库等等，GitHub开源持续迭代。
 - 负责工作
-    - 1.负责项目基础重构搭建，负责需求业务开发以及自测
-    - 2.中间组件开发和维护，其中富文本组件用于3个app，webView库用于2个app。
+    - 1.负责外卖骑手端App中地图模块，导航模块，行程模块等相关的业务。开发无延期，确保自测质量，线上事故<3全年
+    - 2.落地针对地图，导航，奖励，定位等模块转向flutter技术改造，定义两端交互通信接口，拉起Android和iOS交互逻辑
+    - 3.打造一些测试工具，提高测试效率，比如地图mock工具(各种场景)，比如测试提出开发操作磁盘文件可视化工具方便测试内存，有些提到了doKit中
 
 
-#### 3.1 2020年3月到2021年3月份
-- 架构师
-    - 中间组件开发，组件化重构
+
+#### 4.2 2020年3月到2021年3月份
 - 负责立思辰教育旗下诸葛书/豆神学习机/豆神直播课开发迭代
     - 1.组件化开发项目，负责项目业务沟通，项目排期，进度把控等。
     - **2.负责项目基础搭建工作，拆分业务组件，服务组件，功能组件，基础组件，完善项目组件化**。
-- 负责中间组件开发
+- 负责中间组件开发【公共库】
     - **1.针对多个项目，搭建一套可以切换内核，业务解耦合，高拓展性通用视频播放器，用于3个项目**。
     - 2.针对kindle或者平板学习项目开发通用崩溃重启和崩溃日志记录库，用于2个项目。
     - **3.通用网络拦截助手工具开发，方便项目查看页面网络请求日志，请求耗时，流量统计，弱网模拟**。
     - 4.组件化项目之间业务组件通信，使用apt生成代码简化注册流程，提高组件通信交互能力。
 
 
-#### 3.2 2018年7月到2020年3月
-- 负责大搜车旗下一鹿有车项目开发迭代【百万级应用】
+
+#### 4.3 2018年7月到2020年3月
+- 负责大搜车旗下一鹿有车项目开发迭代【从0到1，百万级应用】
 - 一鹿有车Android开发经历
     - 1.重构项目，主导进行MVP架构的更改，以及技术选型方案的商讨和制定。
     - 2.封装公共组件和基础base类，统一项目中弹窗，页面状态管理切换，网络请求等。
@@ -78,7 +88,7 @@
 
 
 
-#### 3.3 2015年9月到2018年7月份
+#### 4.4 2015年9月到2018年7月
 - 工作阶段
     - 第一阶段：投资界NWD部门(15年9月-17年11月)，对于投资界App(新闻类)，负责代码架构优化，迭代；对于新芽App(资讯工具类)，负责新芽客户端独立开发工作。
     - 第二阶段：清科创业IMC部分(17年11月-18年7月)，负责开发沙丘大学App(知识付费视频播放类)。
@@ -89,20 +99,6 @@
     - 4.持续对新芽迭代了18个版本，共总结并且整理了近100个bug，通过腾讯bugly管理平台数据显示，崩溃率从最初的4.1%下降到0.2%。
     - 5.对于投资界和新芽，自己封装了库，支持上拉加载下拉刷新，支持状态切换，支持左右滑动删除，小巧轻便且实用。
     - 6.后期调到公司新部门做知识付费视频App，参考jiaozi播放器等，基于ijkplayer封装了视频播放器库，star近2k。
-
-
-
-### 4.一些技术产出
-- **通用视频播放器**【用于6条业务线，star是1.6k】
-    - 解决视频播放器和业务耦合问题，以及多种业务场景播放，低耦合方便拓展，一键即可切换视频播放器内核。应用多个产品线……
-- 网络拦截小助手【用于4条业务线】
-    - 网络流程分析，记录每个网络请求->响应数据，方便查看很全面的请求头信息，响应头信息，以及body实体，以及网络连接，dns解析，TLS连接，请求响应等时间差……
-- WebView封装库【上搜车内部开源推荐库】
-    - 基于腾讯x5开源库，提高webView开发效率，大概要节约你百分之六十的时间成本。
-- 组件化项目
-    - 项目业务拆分，功能组件抽取，服务组件，以及基础组件的App代码案例。辅助快速熟悉组件化项目
-
-
 
 
 ### 5.个人评价
