--- a/Read/ReadJavaWiki/02.类和对象/03.继承思想详细分析.md
+++ b/Read/ReadJavaWiki/02.类和对象/03.继承思想详细分析.md
@@ -1,55 +1,58 @@
 #### 目录介绍
-- 01.继承简单概述
-- 02.看一个继承的案例
-- 03.初始化基类
-- 04.委托
-- 05.继承中成员变量的关系
+- 01.快速了解继承
+    - 1.1 为何需要继承
+    - 1.2 什么是继承
+    - 1.3 继承的格式
+    - 1.4 继承的意义
+- 02.继承使用介绍
+    - 2.1 看一个案例
+    - 2.2 继承主要事项
+    - 2.3 继承好处和弊端
+- 04.初始化基类
+    - 4.1 无参数构造方法
+    - 4.2 有参数构造方法
+- 05.委托
+    - 5.1 什么是委托
+    - 5.2 有哪些使用场景
 - 06.不支持多继承影响
 - 07.分析继承初始化顺序
 
 
 
-
-### 01.继承简单概述
+### 01.快速了解继承
+#### 1.1 为何需要继承
 - 多个类中存在相同属性和行为时，将这些内容抽取到单独一个类中，那么多个类无需再定义这些属性和行为，只要继承那个类即可。
-
-
-#### 1.2 继承格式
-* 通过extends关键字可以实现类与类的继承
-* class 子类名 extends 父类名 {} 
-* 单独的这个类称为父类，基类或者超类；这多个类可以称为子类或者派生类
-
-
-#### 1.3 继承好处和弊端
-- **继承的好处**
-	* a:提高了代码的复用性
-	* b:提高了代码的维护性
-	* c:让类与类之间产生了关系，是多态的前提
-- **继承的弊端**
-	* 类的耦合性增强了。
-	* 开发的原则：高内聚，低耦合。
-	* 耦合：类与类的关系
-	* 内聚：就是自己完成某件事情的能力
-
-
-#### 1.4 继承的注意事项
-- **继承的注意事项**
-	* a:子类只能继承父类所有非私有的成员(成员方法和成员变量)
-	* b:子类不能继承父类的构造方法，但是可以通过super(待会儿讲)关键字去访问父类构造方法。
-	* c:不要为了部分功能而去继承
-- **继承中构造方法的注意事项**
-	* 父类没有无参构造方法,子类怎么办?
-		* a: 在父类中添加一个无参的构造方法
-		* b:子类通过super去显示调用父类其他的带参的构造方法
-		* c:子类通过this去调用本类的其他构造方法
-		* 本类其他构造也必须首先访问了父类构造
-	* B:注意事项
-	    * super(…)或者this(….)必须出现在第一条语句上
+- 举个例子，猫，狗，马，鸡都具有吃和睡觉的行为，都有年龄和性别属性。那么可以把共有的提取到一个动物类中，那么XX动物都可以继承动物类。
 
 
 
-### 02.看一个继承的案例
-- 继承是所有面向对象语言的一个组成部分。事实证明，在创建类时总是要继承，因为除非显式地继承其他类，否则就隐式地继承 Java 的标准根类对象（Object）。
+#### 1.2 什么是继承
+- 继承是用来表示类之间的 is-a 关系，比如猫是一种哺乳动物。从继承关系上来讲，继承可以分为两种模式，单继承和多继承。单继承表示一个子类只继承一个父类，多继承表示一个子类可以继承多个父类，比如猫既是哺乳动物，又是爬行动物。
+
+
+
+#### 1.3 继承的格式
+- 为了实现继承这个特性，编程语言需要提供特殊的语法机制来支持，比如 Java 使用 extends 关键字来实现继承。
+- class 子类名 extends 父类名 {} 
+- 单独的这个类称为父类，基类或者超类；这多个类可以称为子类或者派生类
+
+
+#### 1.4 继承的意义
+- 继承存在的意义是什么？它能解决什么编程问题？
+- 继承最大的一个好处就是代码复用。
+    - 假如两个类有一些相同的属性和方法，我们就可以将这些相同的部分，抽取到父类中，让两个子类继承父类。这样，两个子类就可以重用父类中的代码，避免代码重复写多遍。不过，这一点也并不是继承所独有的，我们也可以通过其他方式来解决这个代码复用的问题，比如利用组合关系而不是继承关系。
+- 符合人的认知
+    - 如果我们再上升一个思维层面，去思考继承这一特性，可以这么理解：我们代码中有一个猫类，有一个哺乳动物类。猫属于哺乳动物，从人类认知的角度上来说，是一种 is-a 关系。我们通过继承来关联两个类，反应真实世界中的这种关系，非常符合人类的认知，而且，从设计的角度来说，也有一种结构美感。
+- 过度继承的弊端
+    - 过度使用继承，继承层次过深过复杂，就会导致代码可读性、可维护性变差。为了了解一个类的功能，我们不仅需要查看这个类的代码，还需要按照继承关系一层一层地往上查看“父类、父类的父类……”的代码。还有，子类和父类高度耦合，修改父类的代码，会直接影响到子类。
+- 所以，继承这个特性也是一个非常有争议的特性。很多人觉得继承是一种反模式。我们应该尽量少用，甚至不用。关于这个问题，在后面讲到“复用设计”这种设计思想的时候，在进行讨论。
+
+
+
+### 02.继承使用介绍
+#### 2.1 看一个案例
+- 继承是所有面向对象语言的一个组成部分。
+    - 事实证明，在创建类时总是要继承，因为除非显式地继承其他类，否则就隐式地继承 Java 的标准根类对象（Object）。
 - 当你继承时，你说，“这个新类与那个旧类类似。你可以在类主体的左大括号前的代码中声明这一点，使用关键字 extends 后跟基类的名称。当你这样做时，你将自动获得基类中的所有字段和方法。这里有一个例子:
     ```
     class Cleanser {
@@ -104,9 +107,35 @@
     - 你可以在新类中调用基类的该方法。但是在 scrub() 内部，不能简单地调用 scrub()，因为这会产生递归调用。为了解决这个问题，Java的 super 关键字引用了当前类继承的“超类”(基类)。因此表达式 super.scrub() 调用方法 scrub() 的基类版本。
 
 
+#### 2.2 继承主要事项
+- **继承的注意事项**
+	* a:子类只能继承父类所有非私有的成员(成员方法和成员变量)
+	* b:子类不能继承父类的构造方法，但是可以通过super(待会儿讲)关键字去访问父类构造方法。
+	* c:不要为了部分功能而去继承
+- **继承中构造方法的注意事项**
+	* 父类没有无参构造方法,子类怎么办?
+		* a: 在父类中添加一个无参的构造方法
+		* b:子类通过super去显示调用父类其他的带参的构造方法
+		* c:子类通过this去调用本类的其他构造方法
+		* 本类其他构造也必须首先访问了父类构造
+	* B:注意事项
+	    * super(…)或者this(….)必须出现在第一条语句上
 
-### 03.初始化基类
-#### 3.1 无参数构造方法
+
+#### 2.3 继承好处和弊端
+- **继承的好处**
+	* a:提高了代码的复用性
+	* b:提高了代码的维护性
+	* c:让类与类之间产生了关系，是多态的前提
+- **继承的弊端**
+	* 类的耦合性增强了。
+	* 开发的原则：高内聚，低耦合。
+	* 耦合：类与类的关系
+	* 内聚：就是自己完成某件事情的能力
+
+
+### 04.初始化基类
+#### 4.1 无参数构造方法
 - 现在涉及到两个类:基类和派生类。
     - 想象派生类生成的结果对象可能会让人感到困惑。从外部看，新类与基类具有相同的接口，可能还有一些额外的方法和字段。但是继承并不只是复制基类的接口。当你创建派生类的对象时，它包含基类的子对象。这个子对象与你自己创建基类的对象是一样的。只是从外部看，基类的子对象被包装在派生类的对象中。
 - 必须正确初始化基类子对象，而且只有一种方法可以保证这一点 : 
@@ -144,7 +173,7 @@
 
 
 
-#### 3.2 有参数构造方法
+#### 4.2 有参数构造方法
 - 上面的所有例子中构造函数都是无参数的;编译器很容易调用这些构造函数，因为不需要参数。如果没有无参数的基类构造函数，或者必须调用具有参数的基类构造函数，则必须使用 super 关键字和适当的参数列表显式地编写对基类构造函数的调用:
     ```
     class Game {
@@ -179,8 +208,10 @@
 
 
 
-### 04.委托
-- Java不直接支持的第三种重用关系称为委托。这介于继承和组合之间，因为你将一个成员对象放在正在构建的类中(比如组合)，但同时又在新类中公开来自成员对象的所有方法(比如继承)。例如，宇宙飞船需要一个控制模块:
+### 05.委托
+#### 5.1 什么是委托
+- Java不直接支持的第三种重用关系称为委托。
+    - 这介于继承和组合之间，因为你将一个成员对象放在正在构建的类中(比如组合)，但同时又在新类中公开来自成员对象的所有方法(比如继承)。例如，宇宙飞船需要一个控制模块:
     ```
     public class SpaceShipControls {
       void up(int velocity) {}
@@ -201,6 +232,7 @@
       }
       @Override
       public String toString() { return name; }
+  
       public static void main(String[] args) {
         DerivedSpaceShip protector = new DerivedSpaceShip("NSEA Protector");
         protector.forward(100);
@@ -249,16 +281,7 @@
 - 方法被转发到底层 control对象，因此接口与继承的接口是相同的。但是，你对委托有更多的控制，因为你可以选择只在成员对象中提供方法的子集。
 
 
-
-### 05.继承中成员变量的关系
-- 继承中成员变量的关系
-	* A:子类中的成员变量和父类中的成员变量名称不一样
-	* B:子类中的成员变量和父类中的成员变量名称一样
-	* 在子类中访问一个变量的查找顺序("就近原则")
-		* a: 在子类的方法的局部范围找,有就使用
-		* b: 在子类的成员范围找,有就使用
-		* c: 在父类的成员范围找,有就使用
-			* d:如果还找不到,就报错
+#### 5.2 有哪些使用场景
 
 
 
