--- a/Read/ReadJavaWiki/02.类和对象/08.类和方法详细说明.md
+++ b/Read/ReadJavaWiki/02.类和对象/08.类和方法详细说明.md
@@ -9,10 +9,134 @@
 
 
 
-### 好消息
-- 博客笔记大汇总【16年3月到至今】，包括Java基础及深入知识点，Android技术博客，Python学习笔记等等，还包括平时开发中遇到的bug汇总，当然也在工作之余收集了大量的面试题，长期更新维护并且修正，持续完善……开源的文件是markdown格式的！同时也开源了生活博客，从12年起，积累共计N篇[近100万字，陆续搬到网上]，转载请注明出处，谢谢！
-- **链接地址：https://github.com/yangchong211/YCBlogs**
-- 如果觉得好，可以star一下，谢谢！当然也欢迎提出建议，万事起于忽微，量变引起质变！
+### 07.类与对象及其应用
+#### 7.1 描述现实世界事物
+- 描述学生事务
+	* 属性：姓名，年龄，性别
+	* 行为：学习，吃饭，睡觉
+	* 属性：就是该事物的描述信息【成员变量】
+	* 行为：就是该事物能够做什么【成员方法】
+
+
+#### 7.2 类和对象的概念
+- 概念
+	* a:类：是一组相关的属性和行为的集合
+	* b:对象：是该类事物的具体体现
+	* c:举例：
+		* 类    学生
+		* 对象    班长就是一个对象
+
+
+#### 7.3 用引用操作对象
+- 拥有一个引用的同时，并不一定需要有一个对象与它关联。
+    - 如何理解上面这句话，因此，如果想操作一个词或句子，则可以创建一个String引用。可以发现s不是一个对象，而仅仅是创建了一个引用。
+    ``` java
+    String s；//这里创建的只是引用，并不是对象。如果此时给S发送消息，就会返回一个运行时的错误。因为此时s并没有与任何事物相关联。
+    String s=“adad”;//这是一种安全的写法。不过大部分的时候问题不大，如果你只是创建了一个引用，然后在后面的语句中使用到了String。编译器会提示你这个错误（not have been initialized）；
+    ```
+
+
+
+
+### 07.面向对象之类名作为返回值类型
+- 案例
+    ```
+    /*具体类作为返回值类型*/
+    class Student {
+        public void show() {
+            System.out.println("student....show.....................") ;
+        }
+    }
+    
+    // 定义一个类
+    class StudentDemo {
+        public Student getStudent() {
+            return new Student() ;
+        }
+    }
+    
+    // 测试类
+    class ReturnDemo {
+        public static void main(String[] args) {
+            // 创建StudentDemo的对象
+            StudentDemo sd = new StudentDemo() ;
+            // 调用 public Student getStudent()
+            Student s = sd.getStudent() ;
+            // 调用方法
+            s.show() ;
+        }
+    }
+    ```
+
+
+### 08.面向对象之抽象类名作为返回值类型
+- 案例
+    ```
+    /*抽象类作为返回值类型*/
+    abstract class Animal {
+        public abstract void eat() ;
+    }
+    
+    // 定义一个子类
+    class Cat extends Animal {
+        public void eat(){
+            System.out.println("吃..........................") ;
+        }
+    }
+    
+    // 定义一个类
+    class AnimalDemo {
+        public static Animal getAnimal() {   
+            // Animal a = new Cat() ;
+            // return a;
+            return new Cat() ;
+        }   
+    }
+    
+    // 测试类
+    class ReturnDemo2  {
+        public static void main(String[] args) {
+            // 调用AnimalDemo的getAnimal这个方法
+            Animal a =  AnimalDemo.getAnimal() ;
+            // 调用方法
+            a.eat() ;
+        }
+    }
+    ```
+
+
+### 09.面向对象之接口名作为返回值类型
+- 案例
+    ```
+    /*接口作为返回值类型*/
+    interface Jump {
+        public abstract void jump() ;
+    }
+    
+    // 定义一个子类
+    class JumpImpl implements Jump {
+        public void jump(){
+            System.out.println("jum....................") ;
+        }
+    }
+    
+    // 定义一个类
+    class JumpDemo {
+        public static Jump getJump() {
+            return new JumpImpl() ;
+        }
+    }
+    
+    // 测试类
+    class ReturnDemo3  {
+        public static void main(String[] args) {
+            // 调用getJump方法
+            Jump jump = JumpDemo.getJump() ;
+            // 调用
+            jump.jump() ;
+        }
+    }
+    ```
 
 
 
