--- a/Read/ReadJavaWiki/02.类和对象/02.封装思想详细介绍.md
+++ b/Read/ReadJavaWiki/02.类和对象/02.封装思想详细介绍.md
@@ -1,20 +1,33 @@
 #### 目录介绍
-- 01.封装的前言介绍
-- 02.引入访问权限
-- 03.包的概念
-- 04.代码组织
-- 05.创建独一无二的包名
-- 06.解决冲突
-- 07.访问权限修饰符
-- 08.接口和实现
-- 09.类访问权限
+- 01.快速了解封装
+    - 1.1 封装的背景
+    - 1.2 什么是封装
+    - 1.3 封装的案例
+    - 1.4 思考一些问题
+- 02.封装的概念
+    - 2.1 引入访问权限
+    - 2.2 包的概念
+    - 2.3 代码组织
+    - 2.4 创建独一无二的包名
+- 03.解决冲突
+    - 3.1 如何解决包冲突
+    - 3.2 使用包的忠告
+- 04.访问权限修饰符
+    - 4.1 包访问权限
+    - 4.2 public: 接口访问权限
+    - 4.3 private: 你无法访问
+    - 4.4 protected: 继承访问权限
+    - 4.5 包访问权限 Vs Public 构造器
+- 05.封装其他说明
+    - 5.1 接口和实现
+    - 5.2 类访问权限
 
 
 
 
 
-
-### 01.封装的前言介绍
+### 01.快速了解封装
+#### 1.1 封装的背景
 - 代码需要不断打磨
     - 一件好的作品都是经过反复打磨才变得优秀的。如果你把一段代码置于某个位置一段时间，过一会重新来看，你可能发现更好的实现方式。这是重构（refactoring）的原动力之一，重构就是重写可工作的代码，使之更加可读，易懂，因而更易维护。
 - 遇到的问题分析
@@ -22,7 +35,86 @@
     - 这个问题对于类库（library）而言尤其重要。类库的使用者必须依赖他们所使用的那部分类库，并且知道如果使用了类库的新版本，不需要改写代码。另一方面，类库的开发者必须有修改和改进类库的自由，并保证客户代码不会受这些改动影响。
 
 
-### 02.引入访问权限
+#### 1.2 什么是封装
+- 首先来看封装特性。
+    - 封装也叫作信息隐藏或者数据访问保护。类通过暴露有限的访问接口，授权外部仅能通过类提供的方式（或者叫函数）来访问内部信息或者数据。这句话怎么理解呢？我们通过一个简单的例子来解释一下。
+
+
+#### 1.3 封装的案例
+- 下面这段代码是金融系统中一个简化版的虚拟钱包的代码实现。在金融系统中，我们会给每个用户创建一个虚拟钱包，用来记录用户在我们的系统中的虚拟货币量。对于虚拟钱包的业务背景，这里你只需要简单了解一下即可。在面向对象的实战篇中，我们会有单独两节课，利用 OOP 的设计思想来详细介绍虚拟钱包的设计实现。
+    ```java
+    public class Wallet {
+      private String id;
+      private long createTime;
+      private BigDecimal balance;
+      private long balanceLastModifiedTime;
+      // ...省略其他属性...
+    
+      public Wallet() {
+         this.id = IdGenerator.getInstance().generate();
+         this.createTime = System.currentTimeMillis();
+         this.balance = BigDecimal.ZERO;
+         this.balanceLastModifiedTime = System.currentTimeMillis();
+      }
+    
+      // 注意：下面对get方法做了代码折叠，是为了减少代码所占文章的篇幅
+      public String getId() { return this.id; }
+      public long getCreateTime() { return this.createTime; }
+      public BigDecimal getBalance() { return this.balance; }
+      public long getBalanceLastModifiedTime() { return this.balanceLastModifiedTime;  }
+    
+      public void increaseBalance(BigDecimal increasedAmount) {
+        if (increasedAmount.compareTo(BigDecimal.ZERO) < 0) {
+          throw new InvalidAmountException("...");
+        }
+        this.balance.add(increasedAmount);
+        this.balanceLastModifiedTime = System.currentTimeMillis();
+      }
+    
+      public void decreaseBalance(BigDecimal decreasedAmount) {
+        if (decreasedAmount.compareTo(BigDecimal.ZERO) < 0) {
+          throw new InvalidAmountException("...");
+        }
+        if (decreasedAmount.compareTo(this.balance) > 0) {
+          throw new InsufficientAmountException("...");
+        }
+        this.balance.subtract(decreasedAmount);
+        this.balanceLastModifiedTime = System.currentTimeMillis();
+      }
+      
+      private String getString() { return "私有方法"; }
+    }
+    ```
+- 从代码中，我们可以发现，Wallet 类主要有四个属性（也可以叫作成员变量），也就是我们前面定义中提到的信息或者数据。其中，id 表示钱包的唯一编号，createTime 表示钱包创建的时间，balance 表示钱包中的余额，balanceLastModifiedTime 表示上次钱包余额变更的时间。
+- 参照封装特性，对钱包的这四个属性的访问方式进行了限制。调用者只允许通过下面这六个方法来访问或者修改钱包里的数据。
+    ``` java
+    String getId()
+    
+    long getCreateTime()
+    
+    BigDecimal getBalance()
+    
+    long getBalanceLastModifiedTime()
+    
+    void increaseBalance(BigDecimal increasedAmount)
+    
+    void decreaseBalance(BigDecimal decreasedAmount)
+    ```
+- 之所以这样设计，是因为从业务的角度来说，id、createTime 在创建钱包的时候就确定好了，之后不应该再被改动，所以，我们并没有在 Wallet 类中，暴露 id、createTime 这两个属性的任何修改方法，比如 set 方法。而且，这两个属性的初始化设置，对于 Wallet 类的调用者来说，也应该是透明的，所以，我们在 Wallet 类的构造函数内部将其初始化设置好，而不是通过构造函数的参数来外部赋值。
+- 对于钱包余额 balance 这个属性，从业务的角度来说，只能增或者减，不会被重新设置。所以，我们在 Wallet 类中，只暴露了 increaseBalance() 和 decreaseBalance() 方法，并没有暴露 set 方法。对于 balanceLastModifiedTime 这个属性，它完全是跟 balance 这个属性的修改操作绑定在一起的。只有在 balance 修改的时候，这个属性才会被修改。所以，我们把 balanceLastModifiedTime 这个属性的修改操作完全封装在了 increaseBalance() 和 decreaseBalance() 两个方法中，不对外暴露任何修改这个属性的方法和业务细节。这样也可以保证 balance 和 balanceLastModifiedTime 两个数据的一致性。
+- 对于封装这个特性，我们需要编程语言本身提供一定的语法机制来支持。这个语法机制就是访问权限控制。例子中的 private、public 等关键字就是 Java 语言中的访问权限控制语法。private 关键字修饰的属性只能类本身访问，可以保护其不被类之外的代码直接访问。如果 Java 语言没有提供访问权限控制语法，所有的属性默认都是 public 的，那任意外部代码都可以通过类似 wallet.id=123; 这样的方式直接访问、修改属性，也就没办法达到隐藏信息和保护数据的目的了，也就无法支持封装特性了。
+
+
+#### 1.4 思考一些问题
+- 再来看一下，封装的意义是什么？它能解决什么编程问题？
+- 如果我们对类中属性的访问不做限制，那任何代码都可以访问、修改类中的属性，虽然这样看起来更加灵活，但从另一方面来说，过度灵活也意味着不可控，属性可以随意被以各种奇葩的方式修改，而且修改逻辑可能散落在代码中的各个角落，势必影响代码的可读性、可维护性。
+- 比如某个同事在不了解业务逻辑的情况下，在某段代码中“偷偷地”重设了 wallet 中的 balanceLastModifiedTime 属性，这就会导致 balance 和 balanceLastModifiedTime 两个数据不一致。
+- 除此之外，类仅仅通过有限的方法暴露必要的操作，也能提高类的易用性。如果我们把类属性都暴露给类的调用者，调用者想要正确地操作这些属性，就势必要对业务细节有足够的了解。而这对于调用者来说也是一种负担。
+- 如果我们将属性封装起来，暴露少许的几个必要的方法给调用者使用，调用者就不需要了解太多背后的业务细节，用错的概率就减少很多。这就好比，如果一个冰箱有很多按钮，你就要研究很长时间，还不一定能操作正确。相反，如果只有几个必要的按钮，比如开、停、调节温度，你一眼就能知道该如何来操作，而且操作出错的概率也会降低很多。
+
+
+### 02.封装的概念
+### 2.1 引入访问权限
 - Java 提供了访问修饰符（access specifier）
     - 供类库开发者指明哪些对于客户端程序员是可用的，哪些是不可用的。访问控制权限的等级，从“最大权限”到“最小权限”依次是：public，protected，包访问权限（package access）（没有关键字）和 private。
     - 根据上一段的内容，你可能会想，作为一名类库设计者，你会尽可能将一切都设为 private，仅向客户端程序员暴露你愿意他们使用的方法。这就是你通常所做的，尽管这与那些使用其他语言（尤其是C）编程以及习惯了不受限制地访问任何东西的人们的直觉相违背。
@@ -44,11 +136,7 @@
     - protected修饰的话，若是子类，直接调用则可以，声明对象后再调用则不可以
 
 
-
-
-
-
-### 03.包的概念
+#### 2.2 包的概念
 - 包内包含一组类，它们被组织在一个单独的命名空间（namespace）下。
     - 例如，标准 Java 发布中有一个工具库，它被组织在 java.util 命名空间下。java.util 中含有一个类，叫做 ArrayList。使用 ArrayList 的一种方式是用其全名 java.util.ArrayList。
     ```
@@ -101,7 +189,7 @@
 
 
 
-### 04.代码组织
+#### 2.3 代码组织
 - 当编译一个 .java 文件时，.java 文件的每个类都会有一个输出文件。
     - 每个输出的文件名和 .java 文件中每个类的类名相同，只是后缀名是 .class。因此，在编译少量的 .java 文件后，会得到大量的 .class 文件。
     - 如果你使用过编译型语言，那么你可能习惯编译后产生一个中间文件（通常称为“obj”文件），然后与使用链接器（创建可执行文件）或类库生成器（创建类库）产生的其他同类文件打包到一起的情况。
@@ -150,14 +238,14 @@
 
 
 
-### 05.创建独一无二的包名
+#### 2.4 创建独一无二的包名
 - 将所有的文件放在一个子目录还解决了其他的两个问题：创建独一无二的包名和查找可能隐藏于目录结构某处的类。这是通过将 .class 文件所在的路径位置编码成 package 名称来实现的。按照惯例，package 名称是类的创建者的反顺序的 Internet 域名。如果你遵循惯例，因为 Internet 域名是独一无二的，所以你的 package 名称也应该是独一无二的，不会发生名称冲突。如果你没有自己的域名，你就得构造一组不大可能与他人重复的组合（比如你的姓名），来创建独一无二的 package 名称。如果你打算发布 Java 程序代码，那么花些力气去获取一个域名是值得的。
 - 此技巧的第二部分是把 package 名称分解成你机器上的一个目录，所以当 Java 解释器必须要加载一个 .class 文件时，它能定位到 .class 文件所在的位置。首先，它找出环境变量 CLASSPATH（通过操作系统设置，有时也能通过 Java 的安装程序或基于 Java 的工具设置）。CLASSPATH 包含一个或多个目录，用作查找 .class 文件的根目录。从根目录开始，Java 解释器获取包名并将每个句点替换成反斜杠，生成一个基于根目录的路径名（取决于你的操作系统，包名 foo.bar.baz 变成 foo\bar\baz 或 foo/bar/baz 或其它）。然后这个路径与 CLASSPATH 的不同项连接，解释器就在这些目录中查找与你所创建的类名称相关的 .class 文件（解释器还会查找某些涉及 Java 解释器所在位置的标准目录）。
 
 
 
-### 06.解决冲突
-#### 6.1 如何解决包冲突
+### 03.解决冲突
+#### 3.1 如何解决包冲突
 - 如果通过 * 导入了两个包含相同名字类名的类库，会发生什么？例如，假设程序如下：
     ```
     import com.mindviewinc.simple.*;
@@ -178,13 +266,13 @@
 
 
 
-#### 6.2 使用包的忠告
+#### 3.2 使用包的忠告
 - 当创建一个包时，包名就隐含了目录结构。这个包必须位于包名指定的目录中，该目录必须在以 CLASSPATH 开始的目录中可以查询到。 最初使用关键字 package 可能会有点不顺，因为除非遵守“包名对应目录路径”的规则，否则会收到很多意外的运行时错误信息如找不到特定的类，即使这个类就位于同一目录中。如果你收到类似信息，尝试把 package 语句注释掉，如果程序能运行的话，你就知道问题出现在哪里了。
 - 注意，编译过的代码通常位于与源代码的不同目录中。这是很多工程的标准，而且集成开发环境（IDE）通常会自动为我们做这些。必须保证 JVM 通过 CLASSPATH 能找到编译后的代码。
 
 
 
-### 07.访问权限修饰符
+### 04.访问权限修饰符
 - Java 访问权限修饰符 public，protected 和 private 位于定义的类名，属性名和方法名之前。每个访问权限修饰符只能控制它所修饰的对象。
 - 如果不提供访问修饰符，就意味着"包访问权限"。所以无论如何，万物都有某种形式的访问控制权。
 - 类及其组成所使用的常见修饰符
@@ -215,10 +303,7 @@
 
 
 
-
-
-
-#### 7.1 包访问权限
+#### 4.1 包访问权限
 - 默认访问权限没有关键字，通常被称为包访问权限（package access）（有时也称为 friendly）。这意味着当前包中的所有其他类都可以访问那个成员。对于这个包之外的类，这个成员看上去是 private 的。由于一个编译单元（即一个文件）只能隶属于一个包，所以通过包访问权限，位于同一编译单元中的所有类彼此之间都是可访问的。
 - 包访问权限可以把相关类聚到一个包下，以便它们能轻易地相互访问。包里的类赋予了它们包访问权限的成员相互访问的权限，所以你"拥有”了包内的程序代码。只能通过你所拥有的代码去访问你所拥有的其他代码，这样规定很有意义。构建包访问权限机制是将类聚集在包中的重要原因之一。
 - 类控制着哪些代码有权访问自己的成员。其他包中的代码不能一上来就说"嗨，我是 Bob 的朋友！"，然后想看到 Bob 的 protected、包访问权限和 private 成员。取得对成员的访问权的唯一方式是：
@@ -229,7 +314,7 @@
 
 
 
-#### 7.2 public: 接口访问权限
+#### 4.2 public: 接口访问权限
 - 当你使用关键字 public，就意味着紧随 public 后声明的成员对于每个人都是可用的，尤其是使用类库的客户端程序员更是如此。假设定义了一个包含下面编译单元的 dessert 包：
     ```
     package hiding.dessert;
@@ -261,7 +346,7 @@
 - 你可以创建一个 Cookie 对象，因为它构造器和类都是 public 的。但是，在 Dinner.java 中无法访问到 Cookie 对象中的 bite() 方法，因为 bite() 只提供了包访问权限，因而在 dessert 包之外无法访问，编译器禁止你使用它。
 
 
-#### 7.3 private: 你无法访问
+#### 4.3 private: 你无法访问
 - 关键字 private 意味着除了包含该成员的类，其他任何类都无法访问这个成员。同一包中的其他类无法访问 private 成员，因此这等于说是自己隔离自己。另一方面，让许多人合作创建一个包也是有可能的。使用 private，你可以自由地修改那个被修饰的成员，无需担心会影响同一包下的其他类。
 - 默认的包访问权限通常提供了足够的隐藏措施；记住，使用类的客户端程序员无法访问包访问权限成员。这样做很好，因为默认访问权限是一种我们常用的权限（同时也是一种在忘记添加任何访问权限时自动得到的权限）。因此，通常考虑的是把哪些成员声明成 public 供客户端程序员使用。所以，最初不常使用关键字 private，因为程序没有它也可以照常工作。然而，使用 private 是非常重要的，尤其是在多线程环境中。
     ```
@@ -293,13 +378,13 @@
 
 
 
-#### 7.4 protected: 继承访问权限
+#### 4.4 protected: 继承访问权限
 - 关键字 protected 处理的是继承的概念，通过继承可以利用一个现有的类——我们称之为基类，然后添加新成员到现有类中而不必碰现有类。我们还可以改变类的现有成员的行为。
 - 如果你创建了一个新包，并从另一个包继承类，那么唯一能访问的就是被继承类的 public 成员。（如果在同一个包中继承，就可以操作所有的包访问权限的成员。）有时，基类的创建者会希望某个特定成员能被继承类访问，但不能被其他类访问。这时就需要使用 protected。protected 也提供包访问权限，也就是说，相同包内的其他类可以访问 protected 元素。
 
 
 
-#### 7.5 包访问权限 Vs Public 构造器
+#### 4.5 包访问权限 Vs Public 构造器
 - 当你定义一个具有包访问权限的类时，你可以在类中定义一个public构造器，编译器不会报错：
     ```
     // hiding/packageaccess/PublicConstructor.java
@@ -331,8 +416,8 @@
 - 因此，在一个具有包访问权限的类中定义一个 public 的构造器并不能真的使这个构造器成为 public，在声明的时候就应该标记为编译时错误。
 
 
-
-### 08.接口和实现
+### 05.封装其他说明
+#### 5.1 接口和实现
 - 访问控制通常被称为隐藏实现（implementation hiding）。
     - 将数据和方法包装进类中并把具体实现隐藏被称作是封装（encapsulation）。其结果就是一个同时带有特征和行为的数据类型。
 - 出于两个重要的原因，访问控制在数据类型内部划定了边界。
@@ -340,9 +425,7 @@
     - 这直接引出了第二个原因：将接口与实现分离。如果在一组程序中使用接口，而客户端程序员只能向 public 接口发送消息的话，那么就可以自由地修改任何不是 public 的事物（例如包访问权限，protected，或 private 修饰的事物），却不会破坏客户端代码。
 
 
-
-
-### 09.类访问权限
+#### 5.2 类访问权限
 - 访问权限修饰符也可以用于确定类库中的哪些类对于类库的使用者是可用的。如果希望某个类可以被客户端程序员使用，就把关键字 public 作用于整个类的定义。这甚至控制着客户端程序员能否创建类的对象。
 - 为了控制一个类的访问权限，修饰符必须出现在关键字 class 之前：
     ```
