优化线程池封装库，抽取builder

--- a/Read/ReadMeWiki/00.方案实践/02.组件通信设计实践.md
+++ b/Read/ReadMeWiki/00.方案实践/02.组件通信设计实践.md
@@ -21,6 +21,13 @@
     - 落实反馈
 
 
+# spi
+- https://www.cnblogs.com/lwbqqyumidi/p/11991748.html
+- https://www.yimipuzi.com/1158.html
+- https://www.cnblogs.com/aspirant/p/10616704.html
+
+
+
 ### 01.概述
 #### 1.1 项目背景
 - 通过简要的语言描述项目背景以及要达成的业务目标。
