--- a/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
+++ b/Read/ReadShareWiki/00.综合专项/00.杨充个人简历.md
@@ -21,7 +21,8 @@
 ### 2.专业技能
 #### 2.1 基础技能
 - 6年的Android开发经验，能独立地完成开发的工作。有github封装库长期维护的库！有组件化项目经验！
-- 理解基本数据类型和包装类原理，对面向对象，数据结构比如常见List，Map等，泛型设计，线程，反射，异常等有较深理解，具有扎实的Java语言基础。
+- 理解基本数据类型和包装类原理，数据结构比如常见List，Map等，泛型设计，线程，反射，异常等有较深理解，具有扎实的Java语言基础。
+- 熟悉面向对象编程思想，熟练运用设计模式原则，写出高质量可复用，拓展性强，方便维护和阅读的代码，具体可见技术产出库。
 - 熟悉Http协议，熟悉常用状态码，知道https请求传输数据过程，较为熟悉网络协议知识点，开发过网络请求拦截日志信息工具。
 - 熟悉webView的加载url的流程，异常处理，以及白名单处理，loadUrl请求服务器资源的流程。
 - 熟悉Android中四大组件，Handler通信机制，WebView，事件通知，View事件等基础原理。
@@ -32,6 +33,10 @@
 - 熟悉Android组件化开发，将公司项目一步步改造成组件化开发，熟悉业务分层，功能拆分，跨组件通信，组件封装，复用多条业务App。
 - 熟悉一些常用设计模式，比如单利模式，builder模式，工厂模式，订阅者模式，并且运用于实践项目开发中等等。
 - 熟悉glide加载图片压缩，三级缓存，同异步加载，对象池优化，低内存条件优化，优化加载list条目图片等等。
+
+
+#### 2.3 高级技术点
+
 
 
 ### 3.一些技术产出
