使用类实现简单数组

--- a/Read/ReadLeetcode/02.数组/03.删除数组中重复项.md
+++ b/Read/ReadLeetcode/02.数组/03.删除数组中重复项.md
@@ -25,7 +25,7 @@
     函数应该返回新的长度 5, 并且原数组 nums 的前五个元素被修改为 0, 1, 2, 3, 4。
     你不需要考虑数组中超出新长度后面的元素。
     ```
-
+- 注意问题，该数组必须是有序数组。如果是无序数组，则先排序。
 
 
 ### 03.实例代码
